--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,5 +12,7 @@
   <%= f.label :content,'タスク' %>
   <%= f.text_field :content %>
   
+  <%= f.label :status, 'ステータス'
+  <%= f.text_field :status %>
   <%= f.submit'投稿' %>
 <% end %>
