--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,9 +1,11 @@
 <% if logged_in? %>
     <p>ログイン完了ユーザ: <%= current_user.name %></p>
+    <%= link_to 'Tasklist', tasks_path, class: 'btn btn-lg btn-primary' %>
 <% else %>
     <div class="center jumbotron">
         <div class="text-center">
             <h1>Welcome to the Tasklists</h1>
+            <%= link_to 'Log in', login_path, class: 'btn btn-lg btn-primary' %>
             <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
         </div>
     </div>
