--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -18,3 +18,4 @@
 
 <%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-default' %>
 <%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
+<%= link_to 'タスク一覧に戻る', tasks_path, class: 'btn btn-default' %>
