--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,7 @@
   </aside>
   <div class="col-xs-8">
     <ul class="nav nav-tabs nav-justified">
-      <li><a href="#">Tasklists</a></li>
-      <li><a href="#">Followings</a></li>
-      <li><a href="#">Followers</a></li>
+      <li><%= link_to 'tasklist', tasks_path %></li>
     </ul>
   </div>
 </div>
